--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -3,9 +3,10 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
-                                             android:layout_marginBottom="@dimen/activity_vertical_margin"
+                                             android:layout_marginBottom="8dp"
                                              android:layout_marginLeft="@dimen/activity_vertical_margin"
                                              android:layout_marginRight="@dimen/activity_vertical_margin"
+                                             android:layout_marginTop="8dp"
                                              android:clickable="true">
 
     <TextView
