--- a/app/src/main/res/layout/fragment_footer.xml
+++ b/app/src/main/res/layout/fragment_footer.xml
@@ -21,7 +21,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:text="正在加载..."
+        android:layout_marginStart="8dp"
+        android:text="@string/loading"
         app:layout_constraintLeft_toRightOf="@+id/progressBar"
         app:layout_constraintRight_toRightOf="parent" />
 </android.support.constraint.ConstraintLayout>
