--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -6,24 +6,23 @@
     android:layout_marginBottom="8dp"
     android:layout_marginLeft="@dimen/activity_vertical_margin"
     android:layout_marginRight="@dimen/activity_vertical_margin"
-    android:layout_marginTop="8dp"
-    android:clickable="true">
+    android:layout_marginTop="8dp">
 
     <TextView
-        android:id="@+id/itemid"
+        android:id="@+id/item_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?attr/textAppearanceListItem"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/itemname" />
+        app:layout_constraintRight_toLeftOf="@+id/item_name" />
 
     <TextView
-        android:id="@+id/itemname"
+        android:id="@+id/item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?attr/textAppearanceListItem"
-        app:layout_constraintLeft_toRightOf="@+id/itemid"
+        app:layout_constraintLeft_toRightOf="@+id/item_id"
         app:layout_constraintRight_toRightOf="parent" />
 </android.support.constraint.ConstraintLayout>
 
